<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_in_text"
            android:text="@string/sign_in"
            style="@style/sign_up_text"
            android:layout_gravity="right"
            android:layout_marginTop="80dp"
            android:layout_marginRight="55dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:hint="@string/last_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:hint="@string/given_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/givenName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/registerButton"
            android:background="@drawable/register_button_img"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp">
        </ImageButton>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>