<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:cardBackgroundColor="?attr/colorPrimaryDark"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:scaleType="fitCenter"
                android:src="@drawable/donas" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/donuts"
                android:gravity="center_horizontal"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/donut_minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_minus_sign_circle">
                </ImageButton>

                <TextView
                    android:id="@+id/donutQuantity"
                    android:text="0"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <ImageButton
                    android:id="@+id/donut_plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="25dp"
                    android:background="@drawable/ic_add_sign_circle">
                </ImageButton>

            </LinearLayout>

            <TextView
                android:text="@string/select_size"
                android:layout_gravity="center_horizontal"
                style="@style/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/donutSize"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="?attr/colorPrimaryDark"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:scaleType="fitCenter"
                android:src="@drawable/cafe" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/coffee"
                android:gravity="center_horizontal"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/coffee_minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_minus_sign_circle">
                </ImageButton>

                <TextView
                    android:id="@+id/coffeeQuantity"
                    android:text="0"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <ImageButton
                    android:id="@+id/coffee_plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="25dp"
                    android:background="@drawable/ic_add_sign_circle">
                </ImageButton>

            </LinearLayout>

            <TextView
                android:text="@string/select_size"
                android:layout_gravity="center_horizontal"
                style="@style/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/coffeeSize"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>